# zj_humanoid_utils

./: .env  README.md  TODO  pyproject.toml
resources/: v1.0.4.json
scripts/: pdm_build.py  version.py
src/zj_humanoid/: __init__.py  deploy.py  ros_log_helper.py  updater.py
src/zj_humanoid/resources/common/: run.sh
src/zj_humanoid/resources/common/config/: naviai_default.yaml
src/zj_humanoid/resources/common/scripts/: install.sh  install_autostart_service.sh  test_1.sh  zj_humanoid.service
src/zj_humanoid/resources/common/startup/: robot_startUp.launch  test2.py  test3.py  test_1.launch
src/zj_humanoid/resources/versions/test/: v1.1.0.json
src/zjh_utils/: __init__.py  deploy.py  thread.py  utils.py
src/zjh_utils/resources/: .bash_zjh  zj_humanoid.bash
src/zjh_utils/resources/common/: run.sh
src/zjh_utils/resources/common/scripts/: zj_humanoid.service
src/zjh_utils/resources/common/startup/: startup_manager.py
src/zjh_utils/resources/versions/: template.json
src/zjh_utils/resources/versions/release/: v1.0.4.json
src/zjh_utils/resources/versions/test/: v1.1.0.json
tests/: apt_update.sh  test_plumbum.py  test_scripts.py
