[project]
name = "zjh_utils"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "jay", email = "jay.zhangjunjie@outlook.com" }]
dependencies = [
    "plumbum>=1.9.0",
    "fire>=0.5.0",
    "dataclasses-json>=0.6.7",
    "json5>=0.12.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.build]
package-dir = "src"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true



[tool.pdm.scripts]
# 运行 ROS 日志解析器（支持传递参数）
ros-log = { call = "zjh_utils.ros_log_helper:main" }

[project.scripts]
deploy = "zjh_utils.deploy:cli"



# 用来修改每次打包的构建时间等信息
[tool.middleware]
test_version = "v1.0.0"
