[project]
name = "zjh_utils"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [{ name = "jay", email = "jay.zhangjunjie@outlook.com" }]
dependencies = [
    "plumbum>=1.9.0",
    "fire>=0.5.0",
    "dataclasses-json>=0.6.7",
    "json5>=0.12.1",
    "tomli>=2.3.0",
    "art>=6.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend", "json5", "tomli"]
build-backend = "pdm.backend"



[tool.pdm.build]
package-dir = "src"
custom-hook = "scripts/pdm_build.py"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"
version_format = "scripts.version:format_version"

[tool.pdm.scripts]
# 运行 ROS 日志解析器（支持传递参数）
ros-log = { call = "zjh_utils.ros_log_helper:main" }

[project.scripts]
zjh-deploy = "zjh_utils.deploy:cli"


# 用来修改每次打包的构建时间等信息
[tool.deploy]
test_version = "v1.1.0"
